@@ -4045,4 +4045,17 @@ MK: a\x{12345}b\x{09}(d)c
     123     
 No match
 
+/(*UCP)(*UTF)[[:>:]]X/B
+------------------------------------------------------------------
+        Bra
+        \b
+        AssertB
+        Reverse
+        prop Xwd
+        Ket
+        X
+        Ket
+        End
+------------------------------------------------------------------
+
 # End of testinput5 
